- Fixed bug with not working paginator - Changed class rows_invisible to subclass

--- a/static/main.css
+++ b/static/main.css
@@ -78,7 +78,7 @@ body {
     width: 100%;
 }
 
-.rows, .rows_invisible {
+.rows {
     display: flex;
     margin-bottom: 36px;
     flex-direction: row;
@@ -87,6 +87,10 @@ body {
     background-position: 0 50%, 100% 50%;
     -webkit-tap-highlight-color: rgba(126, 126, 133, 0.3);
     width: 100%;
+}
+
+.rows.invisible {
+    display: none;
 }
 
 .rows.teams {
